# dbt-gx

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
dbt_gx/: __init__.py  cli.py  command.py  converter.py  core.py  runner.py  scanner.py
dbt_gx/connections/: __init__.py  postgres.py  snowflake.py
dbt_gx/models/: __init__.py  dbt_base.py  dbt_gx_config.py  dbt_gx_runtime_env.py  dbt_profile.py  default_test_conversions.py  gx_base.py  run_result.py  test_conversion_base.py
example/: dbt_gx.yml
tests/: conftest.py  helpers.py  test_config.py  test_converter.py  test_runner.py  test_scanner.py
tests/resources/dbt_profiles/: profiles.yml
tests/resources/dbt_projects/jaffle-shop/: dbt_project.yml  packages.yml
tests/resources/dbt_projects/jaffle-shop/models/: sources.yaml  stg_customers.yaml  stg_stores.sql  stg_stores.yaml
