[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbt-gx"
version = "0.1.0"
description = "Run your DBT tests using Great Expectations as the execution engine"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["dbt", "great-expectations", "data-quality", "testing"]
authors = [
    { name = "Marcin Szymanski", email = "ms32035@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1.0",
    "dbt-core>=1.8.0",
    "great-expectations>=1.3.12",
    "pyyaml>=6.0.1",
    "numpy<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
    "ruff>=0.1.0",
    "SQLAlchemy>=2.0.0",
    "dbt-postgres>=1.8.0",
    "psycopg[binary]>=3.2.6",
]
snowflake = [
    "snowflake-sqlalchemy>1.7.0",
    "dbt-snowflake>=1.8.0",
]


[project.scripts]
dbt-gx = "dbt_gx.cli:cli"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
disable_error_code = ["misc"]


[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF", "Q"]
ignore = ["PLR0913"]
