[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbt-gx"
version = "0.1.0"
description = "Run your DBT tests using Great Expectations as the execution engine"
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = "MIT"
keywords = ["dbt", "great-expectations", "data-quality", "testing"]
authors = [
    { name = "Marcin Szymanski", email = "ms32035@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.3.1",
    "dbt-core>=1.11.6",
    "great-expectations>=1.15.1",
    "pyyaml>=6.0.3",
    #"numpy<2"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.7",
    "SQLAlchemy>=2.0.46",
    "dbt-postgres>=1.8.20",
    "psycopg[binary]>=3.3.3",
]
snowflake = [
    "snowflake-sqlalchemy>1.9.0",
    "dbt-snowflake>=1.11.3",
    "snowflake-connector-python[secure-local-storage]",
]


[project.scripts]
dbt-gx = "dbt_gx.cli:cli"

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
disable_error_code = ["misc", "untyped-decorator"]


[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF", "Q"]
ignore = ["PLR0913", "PLC0415"]
